tests/ui/traits/const-traits/trait-where-clause.stderr
error: `[const]` is not allowed here
  --> $DIR/trait-where-clause.rs:7:24
   |
LL |     fn b() where Self: [const] Bar;
   |                        ^^^^^^^
   |
note: this function is not `const`, so it cannot have `[const]` trait bounds
  --> $DIR/trait-where-clause.rs:7:8
   |
LL |     fn b() where Self: [const] Bar;
   |        ^

error: `[const]` is not allowed here
  --> $DIR/trait-where-clause.rs:9:13
   |
LL |     fn c<T: [const] Bar>();
   |             ^^^^^^^
   |
note: this function is not `const`, so it cannot have `[const]` trait bounds
  --> $DIR/trait-where-clause.rs:9:8
   |
LL |     fn c<T: [const] Bar>();
   |        ^

error[E0277]: the trait bound `T: Bar` is not satisfied
  --> $DIR/trait-where-clause.rs:15:5
   |
LL |     T::b();
   |     ^ the trait `Bar` is not implemented for `T`
   |
note: required by a bound in `Foo::b`
  --> $DIR/trait-where-clause.rs:7:24
   |
LL |     fn b() where Self: [const] Bar;
   |                        ^^^^^^^^^^^ required by this bound in `Foo::b`
help: consider further restricting type parameter `T` with trait `Bar`
   |
LL | fn test1<T: Foo + Bar>() {
   |                 +++++

error[E0277]: the trait bound `T: Bar` is not satisfied
  --> $DIR/trait-where-clause.rs:17:12
   |
LL |     T::c::<T>();
   |            ^ the trait `Bar` is not implemented for `T`
   |
note: required by a bound in `Foo::c`
  --> $DIR/trait-where-clause.rs:9:13
   |
LL |     fn c<T: [const] Bar>();
   |             ^^^^^^^^^^^ required by this bound in `Foo::c`
help: consider further restricting type parameter `T` with trait `Bar`
   |
LL | fn test1<T: Foo + Bar>() {
   |                 +++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
